--- a/index.html
+++ b/index.html
@@ -112,14 +112,17 @@
 
 <!-- BATTLE -->
 <div id="s7" class="screen">
-    <div class="score">
-        <span><span id="n7a">P1</span><br><span id="seta">0</span></span>
-        <span id="cnt">ROCK</span>
-        <span><span id="n7b">P2</span><br><span id="setb">0</span></span>
+    <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #333;">
+        <span><span id="n7a">P1</span> (<span id="seta">0</span>)</span>
+        <span><span id="n7b">P2</span> (<span id="setb">0</span>)</span>
     </div>
-    <div class="big"><span id="f1">❔</span> <span id="f2">❔</span></div>
-    <p class="center" id="res"></p>
-    <div class="dots" id="pips"></div>
+    <div class="battle-area" style="display:flex; align-items:center; justify-content:center; gap:20px; margin:30px 0;">
+        <span id="f1" style="font-size:72px;">❔</span>
+        <span id="cnt" style="font-size:28px; font-weight:bold; min-width:100px; text-align:center;">ROCK</span>
+        <span id="f2" style="font-size:72px;">❔</span>
+    </div>
+    <p class="center" id="res" style="font-size:24px; font-weight:bold; min-height:30px;"></p>
+    <div class="dots" id="pips" style="margin-top:auto; margin-bottom:20px;"></div>
 </div>
 
 <!-- SET END -->
