--- a/index.html
+++ b/index.html
@@ -723,6 +723,15 @@ function playSound(type) {
             osc.start(now);
             osc.stop(now + 0.3);
             break;
+        case 'click': // Button click - short satisfying pop
+            osc.type = 'sine';
+            osc.frequency.setValueAtTime(800, now);
+            osc.frequency.exponentialRampToValueAtTime(400, now + 0.08);
+            gain.gain.setValueAtTime(0.1, now);
+            gain.gain.exponentialRampToValueAtTime(0.01, now + 0.08);
+            osc.start(now);
+            osc.stop(now + 0.08);
+            break;
     }
 }
 
@@ -946,6 +955,13 @@ function again() {
 function menu() {
     show('s1');
 }
+
+// Add click sound to all buttons
+document.addEventListener('click', function(e) {
+    if (e.target.tagName === 'BUTTON' || e.target.closest('button')) {
+        playSound('click');
+    }
+});
 
 // Start
 init();
