--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
         }
         @keyframes fade-out {
             0% { opacity: 1; transform: scale(1); }
-            50% { opacity: 0.5; transform: scale(0.8) rotate(10deg); }
             100% { opacity: 0; transform: scale(0.5) rotate(-10deg); }
         }
         @keyframes tie-shake {
@@ -139,7 +138,7 @@
         }
         .bonk-winner-left { animation: bonk-rise-left 1s ease-out forwards; }
         .bonk-winner-right { animation: bonk-rise-right 1s ease-out forwards; }
-        .bonk-loser { animation: fade-out 0.5s ease-out 0.5s forwards; opacity: 0; }
+        .bonk-loser { animation: fade-out 0.4s ease-out 0.6s forwards; }
         .tie-shake { animation: tie-shake 0.5s ease-in-out; }
         .fighter-hidden { opacity: 0; pointer-events: none; }
         .fighter-center-left { 
