--- a/index.html
+++ b/index.html
@@ -863,7 +863,9 @@ function init() {
 
 // Register service worker for PWA
 if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('sw.js').catch(() => {});
+    navigator.serviceWorker.register('./sw.js', { scope: './' })
+        .then(reg => console.log('SW registered'))
+        .catch(err => console.log('SW failed', err));
 }
 
 function renderColors() {
