fix: align START GAME button width with card boxes

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         <p class="center" style="margin: 12px 0 0; font-size: 12px; opacity: 0.5; font-style: italic;">Draws award 0.5 points to each team</p>
     </div>
     
-    <button onclick="start()" class="btn-action" style="margin: 20px;">START GAME</button>
+    <button onclick="start()" class="btn-action" style="margin: 20px; width: calc(100% - 40px);">START GAME</button>
 </div>
 
 <!-- P1 PICK -->
